--- a/public/index.html
+++ b/public/index.html
@@ -18,16 +18,20 @@
     </form>
 
     <div ng-repeat="movie in ctrl.movies">
-        <!-- {{ctrl.movies}} -->
         <h2>{{movie.Title}}, {{movie.Year}}</h2>
-            <img ng-src="{{movie.Poster}}" alt="{{movie.name}}"><br/>
-            <form ng-submit="ctrl.addMovie(movie)">
-                <input type="submit" value="Add Movie">
-            </form>
-            <!-- <h2>Starring: {{movie.Actors}}</h2>
-            <h4>Plot: {{movie.Plot}}</h4>
-            <h5>Genre: {{movie.Genre}}</h5>
-            <h6>Rated: {{movie.Rated}}</h6> -->
+        <img ng-src="{{movie.Poster}}" alt="{{movie.Title}}"><br/>
+        <form ng-submit="ctrl.addMovie(movie)">
+            <input type="submit" value="Add Movie">
+        </form>
+        <!-- <h2>Starring: {{movie.Actors}}</h2>
+        <h4>Plot: {{movie.Plot}}</h4>
+        <h5>Genre: {{movie.Genre}}</h5>
+        <h6>Rated: {{movie.Rated}}</h6> -->
+    </div>
+
+    <div ng-repeat="myMovie in ctrl.myMovies">
+        <h2>{{myMovie.name}}, {{myMovie.year}}</h2>
+        <img ng-src="{{myMovie.poster}}" alt="{{myMovie.name}}">
     </div>
 
 </body>
